2005-04-19  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-04-15  Sven de Marothy  <sven@physto.se>

        * java/io/InputStreamReader.java,
        * java/io/OutputStreamWriter.java,
        * java/lang/String.java: Move to NIO charsets.
        * java/io/PrintStream.java: Inline conversion using String.

2005-04-19  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-04-14  Chris Burdess  <dog@gnu.org>

        * java/io/DataOutputStream.java (writeUTF): Use block write for
        output.

2005-04-19  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-04-19  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/metal/MetalBorders.java
        (getBorderInsets): Likewise.

	2005-04-18  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/metal/MetalInternalFrameUI.java
        (createUI): Do not share instances between components.
        * javax/swing/plaf/metal/MetalSliderUI.java
        (createUI): Do not share instances between components.

	2005-04-18  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/metal/MetalBorders:
        (PopupMenuBorder): Added.
        * javax/swing/plaf/metal/MetalLookAndFeel
        (initComponentDefaults): Added PopupMenuBorder.

	2005-04-18  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/metal/MetalScrollBarUI.java:
        (createUI): Instances cannot be shared among JScrollPanes.

	2005-04-18  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/metal/MetalLookAndFeel.java
        (initComponentDefaults): Added defaults for Menu, MenuBar
        MenuEntry fonts.

	2005-04-18  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/metal/MetalBorders.java:
        Adjusted insets of ButtonBorder.
        (RolloverMarginBorder): Added class for toolbar buttons.
        (getButtonBorder): Adjusted factory method to return a shared
        instance of button border.